fix(open-api): fix the Open API specification according to the Tangerine comments
refs: TMI-638